@@ -1,36 +1,0 @@
-# Pip default configurations
-
-variables:
-
-  pip: pip
-  pip-flags: |
-    %{pip} install --no-deps --root=%{install-root} --prefix=%{prefix}
-  pip-install-package: |
-    %{pip-flags} %{conf-root}
-  pip-download-dir: |
-    .bst_pip_downloads
-  pip-install-dependencies: |
-    if [ -e %{pip-download-dir} ]; then %{pip-flags} %{pip-download-dir}/*; fi
-
-config:
-
-  configure-commands: []
-  build-commands: []
-
-  # Commands for installing the software into a
-  # destination folder
-  #
-  install-commands:
-  - |
-    %{pip-install-package}
-  - |
-    %{pip-install-dependencies}
-
-  # Commands for stripping debugging information out of
-  # installed binaries
-  #
-  strip-commands:
-  - |
-    %{strip-binaries}
-  - |
-    %{fix-pyc-timestamps}
