@@ -16,6 +16,9 @@ API
 Plugins
 -------
 
+  o BREAKING CHANGE: pip element plugin has been moved to the
+    bst-plugins-experimental repository.
+
   o The 'git' source will now only fetch a single revision when its ref is set
     to an exact tag in git-describe format (...-0-g...).
 
